# cli-intercept

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: README.md  authoring-denylist.md  claude-code-hooks.md  integration.md
guards/: cmd-guard.sh  denylist.txt  install.sh  test-guard.sh  uninstall.sh
src/cli_intercepts/: gain.py
src/cli_intercepts/sandbox/: claude_invoker.py  cli.py  colors.py  result.py  runner.py  s3_fixture.py
src/cli_intercepts/sandbox/probes/: __init__.py  base.py  direct.py
src/cli_intercepts/sandbox/probes/evasion/: alt_tool.py  obfuscation.py  per_object.py  script.py
src/cli_intercepts/sandbox/probes/social/: authority.py  emergency.py  guilt.py  polite.py
tests/: test_gain.py
